# kosstreet

./: .env.example  .gitignore  Hackathon challenges - AI-Enhanced Civic Issue Reporting (Smart Municipality) (1).docx  README.md  package-lock.json
ai/: AI_BLUEPRINT.md  pyproject.toml
ai/data/demo/: audit_results.json  download_demo_images.py  fixtures.json  precompute_audit.py  run_accuracy_check.py  run_demo_rehearsal.py
ai/data/eval/: .gitignore  bootstrap_dataset.py  manifest.json  run_eval.py  run_street_view_live_eval.py  street_view_probes.json
ai/docs/: accuracy-improvement-blueprint.md  phase2-blueprint.md  phase3-blueprint.md  phase4-blueprint.md  phase5-blueprint.md  phase6-blueprint.md  phase7-blueprint.md  phase8-blueprint.md
ai/src/kostreet_ai/: __init__.py  config.py  main.py  schemas.py
ai/tests/: test_classifier.py  test_deduplication.py  test_export_yolo_dataset.py  test_hybrid.py  test_metrics.py  test_preprocessing.py  test_prompts.py  test_street_audit_planner.py  test_street_view_client.py  test_street_view_sim.py
backend/: backend-blueprint.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_audit_frames.py  0002_audit_frames_and_detection_regions.py  0003_audit_run_scan_coordinates.py  0004_audit_frame_scan_source.py  0005_report_is_visible.py  0006_audit_visibility.py  0007_report_detection_regions.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: __init__.py  engine.py
backend/app/integrations/: __init__.py  openrouter.py  street_imagery.py
backend/app/models/: __init__.py  audit.py  enums.py  report.py
backend/app/repositories/: __init__.py  audit_repository.py  report_repository.py
backend/app/schemas/: __init__.py  audit.py  notification.py  report.py  report_helpers.py
backend/app/seeds/: __init__.py  demo.py
backend/blueprints/: 00-overview.md  01-integrations.md  02-ai-service.md  03-report-service.md  04-audit-service.md  05-routes.md  06-seeder-main.md  07-alembic.md
backend/scripts/: annotate_demo_regions.py  inspect_audit_frames.py
backend/tests/: test_ai_analysis_regions.py  test_audit_analyze_view.py  test_audit_frame_routes.py  test_audit_frames_phase3.py  test_audit_phase7.py  test_audit_scan_path.py  test_demo_seed_frames.py  test_health.py  test_report_storage.py
docs/: api.md  (+19 more)
(+210 files in other folders)
