[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kostreet-backend"
version = "0.1.0"
description = "FastAPI backend for KoStreet civic issue reporting."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "pydantic-settings>=2.7.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
