[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kostreet-backend"
version = "0.1.0"
description = "FastAPI backend for KoStreet civic issue reporting."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.6",
  "geoalchemy2>=0.16.0",
  "httpx>=0.28.1",
  "pillow>=11.1.0",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.7.1",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
